tests/snapshots/yaml_suite_snapshots__yaml_suite_5U3A_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Sequence on same Line as Mapping Key
  from: "@perlpunk"
  tags: error sequence mapping
  fail: true
  yaml: "key: - a\n     - b\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n"
