tests/snapshots/yaml_suite_snapshots__yaml_suite_5U3A_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Sequence on same Line as Mapping Key
  tags: error sequence mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n"
  yaml: "key: - a\n     - b\n"
