tests/snapshots/yaml_suite_snapshots__yaml_suite_62EZ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid block mapping key on same line as previous key
  from: "@perlpunk"
  tags: error flow mapping
  fail: true
  yaml: "---\nx: { y: z }in: valid\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :x\n   +MAP {}\n    =VAL :y\n    =VAL :z\n   -MAP\n"
