tests/snapshots/yaml_suite_snapshots__yaml_suite_62EZ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid block mapping key on same line as previous key
  tags: error flow mapping
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :x\n   +MAP {}\n    =VAL :y\n    =VAL :z\n   -MAP\n"
  yaml: "---\nx: { y: z }in: valid\n"
