tests/snapshots/yaml_suite_snapshots__yaml_suite_652Z_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n?foo: bar\nbar: 42\n"
  emit: "?foo: bar\nbar: 42\n"
  from: "@ingydotnet"
  json: "{\n  \"?foo\" : \"bar\",\n  \"bar\" : 42\n}\n"
  name: Question mark at start of flow key
  tags: flow
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :?foo\n   =VAL :bar\n   =VAL :bar\n   =VAL :42\n  -MAP\n -DOC\n-STR\n"
  yaml: "{ ?foo: bar,\nbar: 42\n}\n"
